--- a/style.css
+++ b/style.css
@@ -70,10 +70,23 @@ article > img {
 
 footer {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  margin-left: 40px;
 }
-footer > img {
-  margin: 10px;
+.contact {
+  color: slategray;
+}
+ a {
+  color: black;
+}
+
+.image-container > img {
+  margin-left: 10px;
   width: 30px;
   height: 30px;
+}
+
+.image-container {
+  display: flex;
 }
